Adding project links

--- a/index.html
+++ b/index.html
@@ -161,13 +161,14 @@
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                     
                 <div class="item">
-                    <span class="project-tagline">Joshua Gluck, Florian Schaub, Amy Friedman, <b>Hana Habib</b>, Norman Sadeh, Lorrie Faith Cranor, and Yuvraj Agarwal. <a href="https://www.usenix.org/system/files/conference/soups2016/soups2016-paper-gluck.pdf">"How Short Is Too Short? Implications of Length and Framing on the Effectiveness of Privacy Notices."</a> <i>In Proceedings of the Twelfth Symposium on Usable Privacy and Security (SOUPS ‘16).</i> 2016. </span>
+                    <span class="project-tagline">Joshua Gluck, Florian Schaub, Amy Friedman, <b>Hana Habib</b>, Norman Sadeh, Lorrie Faith Cranor, and Yuvraj Agarwal. <a href="https://www.usenix.org/system/files/conference/soups2016/soups2016-paper-gluck.pdf" target="_blank">"How Short Is Too Short? Implications of Length and Framing on the Effectiveness of Privacy Notices."</a> <i>In Proceedings of the Twelfth Symposium on Usable Privacy and Security (SOUPS ‘16).</i> 2016. </span>
                 </div><!--//item-->
                 <div class="item">
-                  <span class="project-tagline">Manya Sleeper, William Melicher, <b>Hana Habib</b>, Lujo Bauer, Lorrie Faith Cranor, and Michelle L. Mazurek. <a href="https://pdfs.semanticscholar.org/f32f/8d21840e0c86e2fc2152ca1f3b6324c8215c.pdf">"Sharing personal content online: Exploring channel choice and multi-channel behaviors."</a><i> In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’16).</i> 2016.</span>
+                  <span class="project-tagline">Manya Sleeper, William Melicher, <b>Hana Habib</b>, Lujo Bauer, Lorrie Faith Cranor, and Michelle L. Mazurek. <a href="https://pdfs.semanticscholar.org/f32f/8d21840e0c86e2fc2152ca1f3b6324c8215c.pdf" target="_blank">"Sharing personal content online: Exploring channel choice and multi-channel behaviors."</a><i> In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’16).</i> 2016.</span>
                 </div><!--//item-->
                 <div class="item">
-                 <span class="project-tagline"><b>Hana Qudsi</b> and Maneesh Gupta. <a href="http://ieeexplore.ieee.org/document/6525657/">"Low-Cost, Thermistor Based Respiration Monitor."</a> <i>In Proceedings of the 29th Southern Biomedical Engineering Conference (SBEC ‘13)</i>, pp. 23-24. IEEE, 2013. </span>
+                 <span class="project-tagline"><b>Hana Qudsi</b> and Maneesh Gupta. <a href="http://ieeexplore.ieee.org/document/6525657/" target="_blank">"Low-Cost, Thermistor Based Respiration Monitor."</a> <i>In Proceedings of the 29th Southern Biomedical Engineering Conference (SBEC ‘13)</i>, pp. 23-24. IEEE, 2013. </span>
+                 [<a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/f2012/htq2_mg573/htq2_mg573/index.htm" target="_blank">documentation</a>][<a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/f2012/htq2_mg573/breath_monitor.MP4" target="_blank">demo</a>]
                 </div><!--//item-->
             </section><!--//section-->
             
