--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             	</div>
             	<br>
             	<div class ="item">
-            	<span class="project-title">Stokes Educational Scholarshp Program</span> - <span class="project-tagline">A DoD sponsored scholarship awarded to high-school seniors who plan to study computer science or computer/electrical engineering.</span>
+            	<span class="project-title">Stokes Educational Scholarship Program</span> - <span class="project-tagline">A DoD sponsored scholarship awarded to high-school seniors who plan to study computer science or computer/electrical engineering.</span>
             	</div>
             </section>
 
