--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                 <div class="item">
-                    <span class="project-tagline">Blase Ur, Felicia Alfieri, Maung Aung, Lujo Bauer, Nicolas Christin, Jessica Colnago, Lorrie Faith Cranor, Henry Dixon, Pardis Emami Naeini, <b>Hana Habib</b>, Noah Johnson, and William Melicher. "Design and Evaluation of a Data-Driven Password Meter." <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’17).</i> 2017. </span>
+                    <span class="project-tagline">Blase Ur, Felicia Alfieri, Maung Aung, Lujo Bauer, Nicolas Christin, Jessica Colnago, Lorrie Faith Cranor, Henry Dixon, Pardis Emami Naeini, <b>Hana Habib</b>, Noah Johnson, and William Melicher. "Design and Evaluation of a Data-Driven Password Meter." <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’17).</i> 2017. <b>[Best Paper award]</b></span>
                 </div><!--//item-->    
                 <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, William Melicher, Blase Ur, Sean Segreti, Lujo Bauer, Nicolas Chrisin, and Lorrie Faith Cranor. <a href="https://www.internetsociety.org/sites/default/files/usec2017_01_3_Habib_paper.pdf" target="_blank">"Password Creation in the Presence of Blacklists."</a> <i>In Proceedings of the Workshop on Usable Security (USEC '17).</i> 2017. </span>
