adding pub page and made small additions

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
                     <li class="email"><i class="fa fa-envelope"></i>htq@cs.cmu.edu</li>
                     <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:0123 456 789">0123 456 789</a></li> -->
                     <!-- <li class="website"><i class="fa fa-globe"></i><a href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank">portfoliosite.com</a></li> -->
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/hana-habib" target="_blank">linkedin.com/in/hthabib</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/hthabib" target="_blank">linkedin.com/in/hthabib</a></li>
                     <li><i class="fa fa-file-pdf-o"></i><a href="assets/images/Hana_Habib_CV.pdf" target="_blank">Curriculum Vitae (CV)</a></li>
                     <!-- <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/username</a></li> -->
                     <!-- <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li> -->
+                    <li><i class="fa fa-book"></i><a href="./publications.html">Publications</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
@@ -99,10 +100,10 @@
             </section><!--//section-->
                         
             <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
+                <h2 class="section-title"><i class="fa fa-archive"></i>Selected Publications</h2>
                 <div class="item">
-                    <span class="project-tagline">Sarah Pearman, Jeremy Thomas, Pardis Emami Naeini, <b>Hana Habib</b>, Lujo Bauer, Nicolas Christin, Lorrie Faith Cranor, Serge Egelman, and Alain Forget. "Let’s go in for a closer look: Observing passwords in their natural habitat." <i>In Proceedings of the 24th ACM Conference on Computer and Communications Security (CCS’17).</i> 2017.</span>
-                </div><!--//item-->    
+                    <span class="project-tagline">Sarah Pearman, Jeremy Thomas, Pardis Emami Naeini, <b>Hana Habib</b>, Lujo Bauer, Nicolas Christin, Lorrie Faith Cranor, Serge Egelman, and Alain Forget. "Let’s Go in For a Closer Look: Observing Passwords in Their Natural Habitat." <i>In Proceedings of the 24th ACM Conference on Computer and Communications Security (CCS’17).</i> 2017.</span>
+                </div><!--//item-->
                 <div class="item">
                     <span class="project-tagline">Blase Ur, Felicia Alfieri, Maung Aung, Lujo Bauer, Nicolas Christin, Jessica Colnago, Lorrie Faith Cranor, Henry Dixon, Pardis Emami Naeini, <b>Hana Habib</b>, Noah Johnson, and William Melicher. <a href="http://dl.acm.org/citation.cfm?id=3026050" target="_blank">"Design and Evaluation of a Data-Driven Password Meter."</a> <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’17).</i> 2017. <b>[Best Paper award]</b></span>
                 </div><!--//item-->    
@@ -110,14 +111,7 @@
                     <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, William Melicher, Blase Ur, Sean Segreti, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.internetsociety.org/sites/default/files/usec2017_01_3_Habib_paper.pdf" target="_blank">"Password Creation in the Presence of Blacklists."</a> <i>In Proceedings of the Workshop on Usable Security (USEC '17).</i> 2017. </span>
                 </div><!--//item-->    
                 <div class="item">
-                    <span class="project-tagline">Joshua Gluck, Florian Schaub, Amy Friedman, <b>Hana Habib</b>, Norman Sadeh, Lorrie Faith Cranor, and Yuvraj Agarwal. <a href="https://www.usenix.org/system/files/conference/soups2016/soups2016-paper-gluck.pdf" target="_blank">"How Short Is Too Short? Implications of Length and Framing on the Effectiveness of Privacy Notices."</a> <i>In Proceedings of the Twelfth Symposium on Usable Privacy and Security (SOUPS ‘16).</i> 2016. </span>
-                </div><!--//item-->
-                <div class="item">
-                  <span class="project-tagline">Manya Sleeper, William Melicher, <b>Hana Habib</b>, Lujo Bauer, Lorrie Faith Cranor, and Michelle L. Mazurek. <a href="https://pdfs.semanticscholar.org/f32f/8d21840e0c86e2fc2152ca1f3b6324c8215c.pdf" target="_blank">"Sharing personal content online: Exploring channel choice and multi-channel behaviors."</a><i> In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’16).</i> 2016.</span>
-                </div><!--//item-->
-                <div class="item">
-                 <span class="project-tagline"><b>Hana Qudsi</b> and Maneesh Gupta. <a href="http://ieeexplore.ieee.org/document/6525657/" target="_blank">"Low-Cost, Thermistor Based Respiration Monitor."</a> <i>In Proceedings of the 29th Southern Biomedical Engineering Conference (SBEC ‘13)</i>, pp. 23-24. IEEE, 2013. </span>
-                 [<a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/f2012/htq2_mg573/htq2_mg573/index.htm" target="_blank">documentation</a>][<a href="https://people.ece.cornell.edu/land/courses/ece4760/FinalProjects/f2012/htq2_mg573/breath_monitor.MP4" target="_blank">demo</a>]
+                        <span class="project-tagline"><a href=./publications.html>Full list of publications</a></span>
                 </div><!--//item-->
             </section><!--//section-->
             
@@ -194,7 +188,15 @@
             </section><!--//section-->
 
             <section class="section scholarship-section">
-                <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Scholarships</h2>
+                <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Scholarships &amp; Awards</h2>
+                <div class ="item">
+                <span class="project-title">Privacy Scholars Fellowship Program</span> - <span class="project-tagline">Awarded by the Program on Economics &amp; Privacy (PEP) at George Mason University Antonin Scalia Law School to support research on the economics of privacy and data security.</span>
+                </div>
+                <br>
+                <div class ="item">
+                <span class="project-title">CyLab Presidential Fellowship</span> - <span class="project-tagline">A one-year tuition scholarship awarded to high-achieving exemplary CyLab graduate students researching topics in security and privacy.</span>
+                </div>
+                <br>
                 <div class ="item">
                 <span class="project-title">Executive Women's Forum Fellowship</span> - <span class="project-tagline">A full-tuition scholarship awarded to an incoming female student studying information security at the Information Networking Institute at Carnegie Mellon University.</span>
                 </div>
@@ -218,13 +220,38 @@
                     </td>
                     <td>     
                     <div class="item">
-                        <b>Java</b>
+                        <b>IBM SPSS &amp; R </b>
 <!--                    <h3 class="level-title">Java</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="98%">
                             </div>                                      
                         </div><!--//level-bar   -->                             
                     </div><!--//item-->   
+                    </td>
+                    </tr>
+                    <tr>
+                    <td>
+                    <div class="item">
+                            <b>Git </b>
+                        </div><!--//item-->
+                    </td>
+                    <td>
+                    <div class="item">
+                            <b>Subversion </b>
+                        </div><!--//item-->
+                    </td>
+                    </tr>
+                    <tr>
+                    <tr>
+                    <td>
+                    <div class="item">
+                            <b>MySQL </b>
+                        </div><!--//item-->
+                    </td>
+                    <td>
+                    <div class="item">
+                            <b>Java </b>
+                        </div><!--//item-->
                     </td>
                     </tr>
                     <tr>
@@ -239,6 +266,7 @@
                     </div><!--//item-->
                     </td>
                     </tr>
+                    <td>
                     <tr>
                     <td>
                     <div class="item">
