--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
                     <p>I am currently a PhD student in the Societal Computing program at Carnegie Mellon University, advised by <a href="http://lorrie.cranor.org/" target="_blank">Lorrie Faith Cranor</a>. My research interests span many areas
-                    of security and privacy, and include understanding user behavior and preferences in relation to privacy and security and developing effective notification methods for communicating privacy and security information in the Internet of Things (IoT). </p>
+                    of security and privacy, and include understanding user behavior and preferences in relation to privacy and security and developing effective privacy choice mechanisms for online consumers. </p>
                     <p>Prior to starting my PhD, I completed a Bachelors in Computer Science and Electrical & Computer Engineering from Cornell University and a Masters in Information Technology - Information Security from Carnegie Mellon University. I also worked as a software engineer for the U.S. Department of Defense.</p>
                 </div><!--//summary-->
             </section><!--//section-->
@@ -102,11 +102,11 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Selected Publications</h2>
                 <div class="item">
-                    <span class="project-tagline">Sarah Pearman, Jeremy Thomas, Pardis Emami Naeini, <b>Hana Habib</b>, Lujo Bauer, Nicolas Christin, Lorrie Faith Cranor, Serge Egelman, and Alain Forget. "Let’s Go in For a Closer Look: Observing Passwords in Their Natural Habitat." <i>In Proceedings of the 24th ACM Conference on Computer and Communications Security (CCS’17).</i> 2017.</span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, Vidya Gopalakrishnan, Sarah Pearman, Jeremy Thomas, Alessandro Acquisti, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-prying.pdf" target="_blank">"Away From Prying Eyes: Analyzing Usage and Understanding of Private Browsing."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-tagline">Blase Ur, Felicia Alfieri, Maung Aung, Lujo Bauer, Nicolas Christin, Jessica Colnago, Lorrie Faith Cranor, Henry Dixon, Pardis Emami Naeini, <b>Hana Habib</b>, Noah Johnson, and William Melicher. <a href="http://dl.acm.org/citation.cfm?id=3026050" target="_blank">"Design and Evaluation of a Data-Driven Password Meter."</a> <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’17).</i> 2017. <b>[Best Paper award]</b></span>
-                </div><!--//item-->    
+                    <span class="project-tagline"><b>Hana Habib</b>, Pardis Emami Naeini, Summer Devlin, Maggie Oates, Chelse Swoopes, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-password.pdf" target="_blank">"User Behaviors and Attitudes Under Password Expiration Policies."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
+                </div><!--//item-->  
                 <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, William Melicher, Blase Ur, Sean Segreti, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.internetsociety.org/sites/default/files/usec2017_01_3_Habib_paper.pdf" target="_blank">"Password Creation in the Presence of Blacklists."</a> <i>In Proceedings of the Workshop on Usable Security (USEC '17).</i> 2017. </span>
                 </div><!--//item-->    
@@ -134,7 +134,20 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Intern, Privacy Engineering</h3>
+                            <h3 class="job-title">Research Intern</h3>
+                            <div class="time">May 2018 - Aug 2018</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Snap Inc, Los Angeles</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p> During my internship, I designed and conducted a user study to better understand the role of context on public sharing decisions of Snapchat users, and communicated the findings to stakeholders within the company to inform future product development. I also collaborated with Marketing, Privacy Engineering, and Legal teams to help establish organizational processes for conducting HCI research.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Privacy Engineering Intern</h3>
                             <div class="time">May 2015 - Aug 2015</div>
                         </div><!--//upper-row-->
                         <div class="company">Apple Inc, Cupertino</div>
@@ -190,7 +203,7 @@
             <section class="section scholarship-section">
                 <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Scholarships &amp; Awards</h2>
                 <div class ="item">
-                <span class="project-title">Privacy Scholars Fellowship Program</span> - <span class="project-tagline">Awarded by the Program on Economics &amp; Privacy (PEP) at George Mason University Antonin Scalia Law School to support research on the economics of privacy and data security.</span>
+                <span class="project-title">Privacy Scholars Fellowship Program Participant</span> - <span class="project-tagline">Hosted by the Program on Economics &amp; Privacy (PEP) at George Mason University Antonin Scalia Law School to support research on the economics of privacy and data security.</span>
                 </div>
                 <br>
                 <div class ="item">
