--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,13 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                 <div class="item">
-                    <span class="project-tagline">Sarah Pearman, Jeremy Thomas, Pardis Emami Naeini, <b>Hana Habib</b>, Lujo Bauer, Nicolas Christin, Lorrie Faith Cranor, Serge Egelman, and Alain Forget. "Let’s Go in For a Closer Look: Observing Passwords in Their Natural Habitat." <i>In Proceedings of the 24th ACM Conference on Computer and Communications Security (CCS’17).</i> 2017.</span>
+                    <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, Vidya Gopalakrishnan, Sarah Pearman, Jeremy Thomas, Alessandro Acquisti, Nicolas Christin, and Lorrie Faith Cranor <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-prying.pdf" target="_blank">"Away From Prying Eyes: Analyzing Usage and Understanding of Private Browsing"</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-tagline"><b>Hana Habib</b>, Pardis Emami Naeini, Summer Devlin, Maggie Oates, Chelse Swoopes, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-password.pdf" target="_blank">"User Behaviors and Attitudes Under Password Expiration Policies"</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-tagline">Sarah Pearman, Jeremy Thomas, Pardis Emami Naeini, <b>Hana Habib</b>, Lujo Bauer, Nicolas Christin, Lorrie Faith Cranor, Serge Egelman, and Alain Forget. <a href="https://dl.acm.org/citation.cfm?id=3133973" target="_blank">"Let’s Go in For a Closer Look: Observing Passwords in Their Natural Habitat."</a> <i>In Proceedings of the 24th ACM Conference on Computer and Communications Security (CCS’17).</i> 2017.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-tagline">Pardis Emami Naeini, Sruti Bhagavatula, <b>Hana Habib</b>, Martin Degeling, Lujo Bauer, Lorrie Cranor, Norman Sadeh. <a href="https://www.usenix.org/system/files/conference/soups2017/soups2017-naeini.pdf" target="_blank">"Privacy Expectations and Preferences in an IoT World.”</a> <i>In Proceedings of the Thirteenth Symposium on Usable Privacy and Security (SOUPS ‘17).</i> 2017.</span>
