adding service section

--- a/index.html
+++ b/index.html
@@ -185,20 +185,20 @@
                     </div><!--//details-->
                 </div><!--//item-->
                 
-                <div class="item">
+                <!-- <div class="item">
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Undergraduate Research Assistant</h3>
                             <div class="time">Jan 2010 - May 2012</div>
-                        </div><!--//upper-row-->
+                        </div>< 
                         <div class="company">Cornell Creative Machines Lab, Ithaca</div>
-                    </div><!--//meta-->
+                    </div> 
                     <div class="details">
                         <p>As part of the Fab@Home3D Printer project team, I redesigned the printer’s software to improve efficiency and printer control and programmed a command line interface for testing. I also designed and built a safety enclosure for the printer and developed a printed circuit board to integrate the printer’s milling tool with the main controller board.</p>  
-                    </div><!--//details-->
-                </div><!--//item-->
+                    </div> 
+                </div> <//div-->
                 
-            </section><!--//section-->
+            </section>
 
             <section class="section scholarship-section">
                 <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Scholarships &amp; Awards</h2>
@@ -207,7 +207,7 @@
                 </div>
                 <br>
                 <div class ="item">
-                <span class="project-title">CyLab Presidential Fellowship</span> - <span class="project-tagline">A one-year tuition scholarship awarded to high-achieving exemplary CyLab graduate students researching topics in security and privacy.</span>
+                <span class="project-title">CyLab Presidential Fellowship</span> - <span class="project-tagline">A tuition scholarship awarded to high-achieving exemplary CyLab graduate students researching topics in security and privacy.</span>
                 </div>
                 <br>
                 <div class ="item">
@@ -219,7 +219,36 @@
                 </div>
             </section>
 
-            <section class="skills-section section">
+            <section class="section service-section">
+            	<h2 class="section-title"><i class="fa fa-users"></i>Service</h2>
+            	<div class="skillset">  
+                <table>
+                    <col width="500">
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                        <b>INI Alumni Leadership Council Memember (2018-)</b>                            
+	                    </div><!--//item--> 
+	                    </td>
+	                </tr>
+	                <tr>
+	                    <td>     
+	                    <div class="item">
+	                        <b>CHI Reviewer (2017-2019)</b>                          
+	                    </div><!--//item-->   
+	                    </td>
+                    </tr>
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                            <b>OurCS Facilitator (2017) </b>
+	                        </div><!--//item-->
+	                    </td>
+               		</tr>
+               	</table>
+            </section>
+
+            <section class="section skills-section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Certifications</h2>
                 <div class="skillset">  
                     <table>
@@ -233,12 +262,7 @@
                     </td>
                     <td>     
                     <div class="item">
-                        <b>IBM SPSS &amp; R </b>
-<!--                    <h3 class="level-title">Java</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="98%">
-                            </div>                                      
-                        </div><!--//level-bar   -->                             
+                        <b>IBM SPSS &amp; R </b>                          
                     </div><!--//item-->   
                     </td>
                     </tr>
