updates for end of 2019 academic year

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Selected Publications</h2>
                 <div class="item">
+                    <span class="project-tagline"><b>Hana Habib</b>, Neil Shah, and Rajan Vaish. <a href="https://arxiv.org/pdf/1903.07033.pdf" target="_blank">"Impact of Contextual Factors on SnapchatPublic Sharing."</a> <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’19).</i> 2019. <b>[Best Paper Honorable Mention award]</b></span>
+                </div><!--//item-->  
+                <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, Vidya Gopalakrishnan, Sarah Pearman, Jeremy Thomas, Alessandro Acquisti, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-prying.pdf" target="_blank">"Away From Prying Eyes: Analyzing Usage and Understanding of Private Browsing."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Pardis Emami Naeini, Summer Devlin, Maggie Oates, Chelse Swoopes, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-password.pdf" target="_blank">"User Behaviors and Attitudes Under Password Expiration Policies."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
-                </div><!--//item-->  
-                <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, William Melicher, Blase Ur, Sean Segreti, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.internetsociety.org/sites/default/files/usec2017_01_3_Habib_paper.pdf" target="_blank">"Password Creation in the Presence of Blacklists."</a> <i>In Proceedings of the Workshop on Usable Security (USEC '17).</i> 2017. </span>
-                </div><!--//item-->    
+                </div><!--//item-->     
                 <div class="item">
                         <span class="project-tagline"><a href=./publications.html>Full list of publications</a></span>
                 </div><!--//item-->
@@ -227,24 +227,32 @@
                     <tr>
 	                    <td>
 	                    <div class="item">
-	                        <b>INI Alumni Leadership Council Memember (2018-)</b>                            
-	                    </div><!--//item--> 
-	                    </td>
-	                </tr>
-	                <tr>
-	                    <td>     
-	                    <div class="item">
-	                        <b>CHI Reviewer (2017-2019)</b>                          
-	                    </div><!--//item-->   
-	                    </td>
-                    </tr>
-                    <tr>
-	                    <td>
-	                    <div class="item">
-	                            <b>OurCS Facilitator (2017) </b>
+	                            <b>Who Are You!? Adventures in Authentication (WAY) Program Committee (2019)</b>
 	                        </div><!--//item-->
 	                    </td>
                		</tr>
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                            <b>OurCS Conference Committee (2019) </b>
+	                        </div><!--//item-->
+	                    </td>
+               		</tr>
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                            <b>OurCS Facilitator (2017, 2019) </b>
+	                        </div><!--//item-->
+	                    </td>
+               		</tr>
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                        <b>INI Alumni Leadership Council (2018-)</b>                            
+	                    </div><!--//item--> 
+	                    </td>
+	                </tr>
+
                	</table>
             </section>
 
