updates to service

--- a/index.html
+++ b/index.html
@@ -230,6 +230,20 @@
 	                            <b>Who Are You!? Adventures in Authentication (WAY) Program Committee (2019)</b>
 	                        </div><!--//item-->
 	                    </td>
+                    </tr>
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                            <b> PhD Women@SCS Board (2019-)</b>
+	                        </div><!--//item-->
+	                    </td>
+               		</tr>
+                    <tr>
+	                    <td>
+	                    <div class="item">
+	                            <b>Graduate Student Assembly (2019-)</b>
+	                        </div><!--//item-->
+	                    </td>
                		</tr>
                     <tr>
 	                    <td>
