--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                     <span class="project-tagline"><b>Hana Habib</b>, Neil Shah, and Rajan Vaish. <a href="https://arxiv.org/pdf/1903.07033.pdf" target="_blank">"Impact of Contextual Factors on SnapchatPublic Sharing."</a> <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’19).</i> 2019. <b>[Best Paper Honorable Mention award]</b></span>
                 </div><!--//item-->  
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, Vidya Gopalakrishnan, Sarah Pearman, Jeremy Thomas, Alessandro Acquisti, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-prying.pdf" target="_blank">"Away From Prying Eyes: Analyzing Usage and Understanding of Private Browsing."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
-                </div><!--//item-->
+                    <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Aditi Jannu, Neha Sridhar, Chelse Swoopes, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. "An Empirical Analysis of Data Deletion and Opt-Out Choices on 150 Websites." <i>In Proceedings of the Fifteenth Symposium on Usable Privacy and Security (SOUPS'19).</i> 2019.</span>
+                </div><!--//item-->  
                 <div class="item">
-                    <span class="project-tagline"><b>Hana Habib</b>, Pardis Emami Naeini, Summer Devlin, Maggie Oates, Chelse Swoopes, Lujo Bauer, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-password.pdf" target="_blank">"User Behaviors and Attitudes Under Password Expiration Policies."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
-                </div><!--//item-->     
+                    <span class="project-tagline"><b>Hana Habib</b>, Jessica Colnago, Vidya Gopalakrishnan, Sarah Pearman, Jeremy Thomas, Alessandro Acquisti, Nicolas Christin, and Lorrie Faith Cranor. <a href="https://www.usenix.org/system/files/conference/soups2018/soups2018-habib-prying.pdf" target="_blank">"Away From Prying Eyes: Analyzing Usage and Understanding of Private Browsing."</a> <i>In Proceedings of the Fourteenth Symposium on Usable Privacy and Security (SOUPS'18).</i> 2018.</span>
+                </div><!--//item-->   
                 <div class="item">
                         <span class="project-tagline"><a href=./publications.html>Full list of publications</a></span>
                 </div><!--//item-->
@@ -127,7 +127,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>As PhD student researcher, I develop user study protocols to investigate research questions in the space of usable privacy and security. I then utilize quantitative and qualitative methods to analyze data collected from these user studies.</p>
-                        <p>During the Fall 2016 semester I also served as a Teaching Assistant for Privacy Policy, Law, and Technology, a cross-discipline graduate level course.</p>
+                        <p>I also served as a Teaching Assistant for Usable Privacy and Security (Spring 2019), a research methods focused graduate level course, and Privacy Policy, Law, and Technology (Fall 2016), a cross-discipline graduate level course.</p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
