--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,9 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Publications</h2>
                 <div class="item">
+                    <span class="project-tagline"><b>Hana Habib</b>, Yixin Zou, Aditi Jannu, Neha Sridhar, Chelse Swoopes, Alessandro Acquisti, Lorrie Faith Cranor, Norman Sadeh, and Floriah Schaub. "An Empirical Analysis of Data Deletion and Opt-Out Choices on 150 Websites." <i>In Proceedings of the Fifteenth Symposium on Usable Privacy and Security (SOUPS'19).</i> 2019.</span>
+                </div><!--//item--> 
+                <div class="item">
                     <span class="project-tagline"><b>Hana Habib</b>, Neil Shah, and Rajan Vaish. <a href="https://arxiv.org/pdf/1903.07033.pdf" target="_blank">"Impact of Contextual Factors on SnapchatPublic Sharing."</a> <i>In Proceedings of the ACM SIGCHI Conference on Human Factors in Computing Systems (CHI ’19).</i> 2019. <b>[Best Paper Honorable Mention award]</b></span>
                 </div><!--//item--> 
                 <div class="item">
